unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Advanced_Debug__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Advanced_Debug__c</fullName>
    <label>Advanced Debug</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>