unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Async_Action_Details__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Async_Action_Details__c</fullName>
    <label>Async Action Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>