unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Callout_Template__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Callout_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Callout Template</label>
    <referenceTo>d_wh__Callout_Template__c</referenceTo>
    <relationshipLabel>Call Logs</relationshipLabel>
    <relationshipName>Callout_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>