unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Direction__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>