unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Headers__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Headers__c</fullName>
    <label>Request Headers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>