unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Ignored_Call__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Ignored_Call__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ignored Call</label>
    <type>Checkbox</type>
</CustomField>