unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Main_Object_Id__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Main_Object_Id__c</fullName>
    <label>Main Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>