unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Method__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Method__c</fullName>
    <label>Method</label>
    <length>16</length>
    <type>Text</type>
</CustomField>