unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Request_Body__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Request_Body__c</fullName>
    <label>Request Body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>