unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Response_Code__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Response_Code__c</fullName>
    <label>Response Code</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>