unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__URL__c.field-meta.xml
<CustomField>
    <fullName>d_wh__URL__c</fullName>
    <label>URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>