unpackaged/main/default/objects/d_wh__Callout_Log__c/fields/d_wh__Webhook_Id__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Webhook_Id__c</fullName>
    <externalId>true</externalId>
    <label>Webhook Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>