unpackaged/main/default/objects/d_wh__Callout_Log__c/listViews/d_wh__All.listView-meta.xml
<ListView>
    <fullName>d_wh__All</fullName>
    <columns>NAME</columns>
    <columns>d_wh__Direction__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>d_wh__Callout_Template__c</columns>
    <columns>d_wh__Inbound_Call_Template__c</columns>
    <columns>d_wh__Main_Object_Id__c</columns>
    <columns>d_wh__URL__c</columns>
    <columns>d_wh__Method__c</columns>
    <columns>d_wh__Response_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>